Updated Combat and Views

--- a/templates/character_sheet.html
+++ b/templates/character_sheet.html
@@ -2,6 +2,22 @@
 
 <h2>Name:{{character.name}}</h2>
 
+<h2>Current HP:{{character.hit_points_current}}</h2>
+
+<h2>Total HP:{{character.hit_points_total}}</h2>
+
+<h2>Strength:{{character.strength}}</h2>
+
+<h2>Dexterity:{{character.dexterity}}</h2>
+
+<h2>Constitution:{{character.constitution}}</h2>
+
+<h2>Intelligence:{{character.intelligence}}</h2>
+
+<h2>Wisdom:{{character.wisdom}}</h2>
+
+<h2>Charisma:{{character.charisma}}</h2>
+
 
 
 
