Attack button update

--- a/templates/home.html
+++ b/templates/home.html
@@ -119,6 +119,8 @@
                     <div class="combat_status_bar" id="combat_narration_frame_message">
                         text here
                     </div>
+                    <div class="cancel_button"><button onclick="handle_cancel()">Cancel</button> 
+                    </div>
                 </div>
             </div>
             <!-- <p><b>Current Turn: {{name}}</b></p>-->
