--- a/ui/static/stylesheet.css
+++ b/ui/static/stylesheet.css
@@ -123,6 +123,7 @@ table.characters_left {
 table.characters_right {
     float: right;
     border-spacing:10px 0px;
+    
 }
 td.character {
     border:3px solid #35161F;
@@ -201,11 +202,17 @@ div.combat_display {
     width: 100%;
     display: none;
 }
-div.combat_status_bar {
+div.combat_frame { 
     position: absolute;
     top: 0px;
-    height: 60px;
+    left: 0px;
     width: 80%;
+    height: 100%;
+    padding: 20px;
+}
+div.combat_status_bar {
+    position: absolute;
+    top: 20px;
     padding: 10px;
 }
 table.combat_buttons {
