Save game state

--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -142,7 +142,7 @@
     </div>
     <div class="loading_spinner">
         <img src="/static/images/spinner_1.gif"/><br/>
-        Entering Combat...
+        <span id="spinner_text"></span>
     </div>
 </body>
 </html>
