--- a/ui/static/stylesheet.css
+++ b/ui/static/stylesheet.css
@@ -172,6 +172,18 @@ div.character-overlay {
     background: rgba(128, 128, 128, 0.0);
     z-index: 1;
  }
+ div.hp_bar_container {
+    width: 80%;
+    background-color: grey;
+    margin: 6px auto;
+    border: 1px solid black;
+ }
+ div.hp_bar {
+    width: 100%;
+    height: 4px;
+    background-color: green;
+ }
+ 
  
 /**** 
  Dialogue Panel at bottom of display
