--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -32,7 +32,7 @@
                 
                 <td class="character">
                     <img src="/static/images/character-2.png"/><br/>
-                    Rouge
+                    Rogue
                     <div class="character-tooltip">
                         Class: Rogue<br/>
                         Level: 2<br/>
