--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -101,11 +101,11 @@
                     <table class="combat_buttons">
                         <tr>
                             <td><button onclick="handle_attack()">Attack</button></td>
-                            <td><button onclick="handle_defend()">Defend</button></td>
+                            <!-- <td><button onclick="handle_defend()">Defend</button></td> -->
                         </tr>
                         <tr>
-                            <td><button onclick="handle_spell()">Spell</button></td>
-                            <td><button onclick="handle_run()">Run</button></td>
+                            <!-- <td><button onclick="handle_spell()">Spell</button></td> -->
+                            <!-- <td><button onclick="handle_run()">Run</button></td> -->
                         </tr>
                     </table>
                 </div>
